--- a/.prettierignore
+++ b/.prettierignore
@@ -4,15 +4,14 @@
 /node_modules
 /.pnp
 .pnp.js
-.yarn/install-state.gz
 
 # testing
 /coverage
 
 # next.js
+.next
 /.next/
 /out/
-next-env.d.ts
 
 # production
 /build
@@ -25,17 +24,17 @@ next-env.d.ts
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
-
 
 # local env files
-.env
-.env*.local
-.env.dev*
-.env.prod*
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # vercel
 .vercel
 
-# typescript
-*.tsbuildinfo
+# changelog
+CHANGELOG.md
+
+pnpm-lock.yaml
