--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.51.21",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "next": "14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.4.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
